--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # 基本配置
 spring.application.name=springboot-pomodoro
-server.port=8080
+server.port=8084
 
 # context path (選配)
 #server.servlet.context-path=/mvc
@@ -10,7 +10,7 @@ spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
 # mysql 配置
-spring.datasource.url=jdbc:mysql://localhost:3306/pomodoro?useSSL=false&serverTimezone=Asia/Taipei&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/todopomodoro?useSSL=false&serverTimezone=Asia/Taipei&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=abc123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
