--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,32 +2,35 @@
 spring.application.name=springboot-pomodoro
 server.port=8080
 
-# context path (選配)
-#server.servlet.context-path=/mvc
-
 # jsp 配置
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
-# mysql 配置
+# MySQL 配置
 spring.datasource.url=jdbc:mysql://localhost:3306/todopomodoro?useSSL=false&serverTimezone=Asia/Taipei&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=abc123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA 配置
-# 自動更新表結構，可根據需要設置為 create, update, validate, none
-spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
-# view是資料庫的機制
+
+# 顯示執行的SQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# 讓 Hibernate 自動偵測方言，移除手動指定
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Log 配置
-# 根日誌層級為 INFO
 logging.level.root=INFO
-# 設定日誌保存目錄和文件名稱(會在專案目錄下自動建立一個 log 資料夾與 app.log 檔案)
 logging.file.name=logs/app.log
+
+# 為了除錯，暫時加入更詳細的日誌
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.example.demo=DEBUG
 
 # 啟用 hiddenmethod filter
 spring.mvc.hiddenmethod.filter.enabled=true
